# SysControl

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  SysControl.command  SysControl.spec  agent.py  gui.py  install-cli.sh  prompt.json  pyproject.toml  remote.py  server.py
.github/workflows/: ci.yml  release.yml
agent/: REMOTE_SETUP.md  __init__.py  agents.py  bridge.py  cli.py  cli_coding.py  cli_compact.py  cli_completers.py  cli_keys.py  cli_session.py  core.py  credentials.py  paths.py  remote.py  runner.py  slash.py  updater.py
agent/gui/: __init__.py  app.py  chat_history.py  chat_widget.py  goodbye_dialog.py  input_widget.py  main_window.py  message_bubble.py  settings_dialog.py  sidebar.py  theme.py  worker.py
build_resources/: entitlements.plist
deep_research/: __init__.py  config.py  critic.py  evidence_store.py  extractor.py  orchestrator.py  planner.py  query_analyzer.py  retriever.py  schemas.py  synthesizer.py  verifier.py
docs/: cli-interface-mockups.html
mcp/: __init__.py  prompt.json  server.py
scripts/: build_dmg.sh  build_macos.sh  make_icon.py
swift/: Package.swift  build.sh  install.sh
swift/SysControl/App/: AppState.swift  DesignSystem.swift  SysControlApp.swift
swift/SysControl/Models/: ChatMessage.swift  ChatSession.swift  ProviderConfiguration.swift  SavedChat.swift
swift/SysControl/Resources/: AppIcon.icns
swift/SysControl/Services/: BackendService.swift  UpdateService.swift
swift/SysControl/Storage/: ChatHistoryManager.swift  KeychainHelper.swift  PermissionConfigStore.swift  PersistenceManager.swift  ProviderConfigStore.swift  StorageQueue.swift
swift/SysControl/Views/: ChatView.swift  CommandPalette.swift  ContentView.swift  InputBar.swift  LazyMarkdownText.swift  MessageBubble.swift  OnboardingView.swift  SettingsView.swift  SidebarView.swift
tests/: test_cli_coding.py  test_cli_compact.py  test_cli_completers.py  test_cli_session.py  test_core.py  test_credentials.py  test_server_helpers.py  test_updater.py
