[project]
name = "syscontrol"
version = "1.4.3"
description = "All-In-One AI agent with MCP tool server; Ultron but slightly weaker and nicer 😉"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "system-monitor", "ollama", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "psutil>=5.9.0",
    "matplotlib>=3.7.0",
    "openai>=2.26.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pypdf>=4.0",
]

[project.scripts]
syscontrol        = "agent.cli:main"
syscontrol-server = "mcp.server:main"

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py>=12.0.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: root shims + both sub-packages.
include = ["agent.py", "agent/", "mcp/", "deep_research/"]


# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "mcp", "deep_research"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true
warn_unused_ignores    = true
warn_return_any        = true
pretty                 = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["agent", "mcp"]
omit    = [".venv/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
